[gd_scene load_steps=16 format=2]

[ext_resource path="res://Engine/MainScenes/StartMenu/Slots/Slots.gd" type="Script" id=1]
[ext_resource path="res://Engine/Hud/Ttf/aire_exterior/AireExterior.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Engine/MainScenes/StartMenu/OptionElement/OptionElement.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Engine/MainScenes/StartMenu/Slots/SlotSlotElement/SlotElement.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="Theme" id=8]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
CheckBox/colors/font_color = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckBox/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = null
CheckBox/icons/checked = null
CheckBox/icons/radio_checked = null
CheckBox/icons/radio_unchecked = null
CheckBox/icons/unchecked = null
CheckBox/styles/disabled = null
CheckBox/styles/focus = null
CheckBox/styles/hover = null
CheckBox/styles/hover_pressed = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
CheckButton/colors/font_color = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_hover_pressed = Color( 0, 0, 0, 1 )
CheckButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = null
CheckButton/icons/off = null
CheckButton/icons/off_disabled = null
CheckButton/icons/on = null
CheckButton/icons/on_disabled = null
CheckButton/styles/disabled = null
CheckButton/styles/focus = null
CheckButton/styles/hover = null
CheckButton/styles/hover_pressed = null
CheckButton/styles/normal = null
CheckButton/styles/pressed = null
ColorPicker/constants/h_width = 30
ColorPicker/constants/label_width = 10
ColorPicker/constants/margin = 4
ColorPicker/constants/sv_height = 256
ColorPicker/constants/sv_width = 256
ColorPicker/icons/add_preset = null
ColorPicker/icons/color_hue = null
ColorPicker/icons/color_sample = null
ColorPicker/icons/overbright_indicator = null
ColorPicker/icons/preset_bg = null
ColorPicker/icons/screen_picker = null
ColorPickerButton/colors/font_color = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
ColorPickerButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
ColorPickerButton/constants/hseparation = 2
ColorPickerButton/fonts/font = null
ColorPickerButton/icons/bg = null
ColorPickerButton/styles/disabled = null
ColorPickerButton/styles/focus = null
ColorPickerButton/styles/hover = null
ColorPickerButton/styles/normal = null
ColorPickerButton/styles/pressed = null
Dialogs/constants/button_margin = 32
Dialogs/constants/margin = 8
FileDialog/colors/file_icon_modulate = Color( 0, 0, 0, 1 )
FileDialog/colors/files_disabled = Color( 0, 0, 0, 1 )
FileDialog/colors/folder_icon_modulate = Color( 0, 0, 0, 1 )
FileDialog/icons/file = null
FileDialog/icons/folder = null
FileDialog/icons/parent_folder = null
FileDialog/icons/reload = null
FileDialog/icons/toggle_hidden = null
Fonts/fonts/large = null
Fonts/fonts/normal = null
GraphEdit/colors/activity = Color( 0, 0, 0, 1 )
GraphEdit/colors/grid_major = Color( 0, 0, 0, 1 )
GraphEdit/colors/grid_minor = Color( 0, 0, 0, 1 )
GraphEdit/colors/selection_fill = Color( 0, 0, 0, 1 )
GraphEdit/colors/selection_stroke = Color( 0, 0, 0, 1 )
GraphEdit/constants/bezier_len_neg = 160
GraphEdit/constants/bezier_len_pos = 80
GraphEdit/constants/port_grab_distance_horizontal = 48
GraphEdit/constants/port_grab_distance_vertical = 6
GraphEdit/icons/minimap = null
GraphEdit/icons/minus = null
GraphEdit/icons/more = null
GraphEdit/icons/reset = null
GraphEdit/icons/snap = null
GraphEdit/styles/bg = null
GraphEditMinimap/colors/resizer_color = Color( 0, 0, 0, 1 )
GraphEditMinimap/icons/resizer = null
GraphEditMinimap/styles/bg = null
GraphEditMinimap/styles/camera = null
GraphEditMinimap/styles/node = null
GraphNode/colors/close_color = Color( 0, 0, 0, 1 )
GraphNode/colors/resizer_color = Color( 0, 0, 0, 1 )
GraphNode/colors/title_color = Color( 0, 0, 0, 1 )
GraphNode/constants/close_offset = 18
GraphNode/constants/port_offset = 3
GraphNode/constants/separation = 1
GraphNode/constants/title_offset = 20
GraphNode/fonts/title_font = null
GraphNode/icons/close = null
GraphNode/icons/port = null
GraphNode/icons/resizer = null
GraphNode/styles/breakpoint = null
GraphNode/styles/comment = null
GraphNode/styles/commentfocus = null
GraphNode/styles/defaultfocus = null
GraphNode/styles/defaultframe = null
GraphNode/styles/frame = null
GraphNode/styles/position = null
GraphNode/styles/selectedframe = null
GridContainer/constants/hseparation = 4
GridContainer/constants/vseparation = 4
HBoxContainer/constants/separation = 4
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource( 3 )
HScrollBar/styles/grabber_highlight = SubResource( 4 )
HScrollBar/styles/grabber_pressed = SubResource( 5 )
HScrollBar/styles/scroll = SubResource( 6 )
HScrollBar/styles/scroll_focus = SubResource( 7 )
HSeparator/constants/separation = 4
HSeparator/styles/separator = null
HSlider/icons/grabber = null
HSlider/icons/grabber_disabled = null
HSlider/icons/grabber_highlight = null
HSlider/icons/tick = null
HSlider/styles/grabber_area = null
HSlider/styles/grabber_area_highlight = null
HSlider/styles/slider = null
HSplitContainer/constants/autohide = 1
HSplitContainer/constants/separation = 12
HSplitContainer/icons/grabber = null
HSplitContainer/styles/bg = null
Icons/icons/close = null
ItemList/colors/font_color = Color( 0, 0, 0, 1 )
ItemList/colors/font_color_selected = Color( 0, 0, 0, 1 )
ItemList/colors/guide_color = Color( 0, 0, 0, 1 )
ItemList/constants/hseparation = 4
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 2
ItemList/constants/vseparation = 2
ItemList/fonts/font = null
ItemList/styles/bg = null
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0, 0, 0, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0, 0, 0, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = null
LineEdit/styles/read_only = null
LinkButton/colors/font_color = Color( 0, 0, 0, 1 )
LinkButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
LinkButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
LinkButton/constants/underline_spacing = 2
LinkButton/fonts/font = null
LinkButton/styles/focus = null
MarginContainer/constants/margin_bottom = 0
MarginContainer/constants/margin_left = 0
MarginContainer/constants/margin_right = 0
MarginContainer/constants/margin_top = 0
MenuButton/colors/font_color = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
MenuButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
MenuButton/constants/hseparation = 3
MenuButton/fonts/font = null
MenuButton/styles/disabled = null
MenuButton/styles/focus = null
MenuButton/styles/hover = null
MenuButton/styles/normal = null
MenuButton/styles/pressed = null
OptionButton/colors/font_color = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
OptionButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = null
OptionButton/icons/arrow = null
OptionButton/styles/disabled = null
OptionButton/styles/focus = null
OptionButton/styles/hover = null
OptionButton/styles/normal = null
OptionButton/styles/pressed = null
Panel/styles/panel = null
PanelContainer/styles/panel = null
PopupDialog/styles/panel = null
PopupMenu/colors/font_color = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_accel = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_disabled = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_separator = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
PopupPanel/styles/panel = null
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = null
ProgressBar/styles/fg = null
RichTextLabel/colors/default_color = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_selected = Color( 0, 0, 0, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
RichTextLabel/colors/selection_color = Color( 0, 0, 0, 1 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = null
ScrollContainer/styles/bg = null
SpinBox/icons/updown = null
TabContainer/colors/font_color_bg = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_disabled = Color( 0, 0, 0, 1 )
TabContainer/colors/font_color_fg = Color( 0, 0, 0, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = null
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null
Tabs/colors/font_color_bg = Color( 0, 0, 0, 1 )
Tabs/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Tabs/colors/font_color_fg = Color( 0, 0, 0, 1 )
Tabs/constants/hseparation = 4
Tabs/constants/label_valign_bg = 2
Tabs/constants/label_valign_fg = 0
Tabs/constants/top_margin = 24
Tabs/fonts/font = null
Tabs/icons/close = null
Tabs/icons/decrement = null
Tabs/icons/decrement_highlight = null
Tabs/icons/increment = null
Tabs/icons/increment_highlight = null
Tabs/styles/button = null
Tabs/styles/button_pressed = null
Tabs/styles/panel = null
Tabs/styles/tab_bg = null
Tabs/styles/tab_disabled = null
Tabs/styles/tab_fg = null
TextEdit/colors/background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/bookmark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/brace_mismatch_color = Color( 0, 0, 0, 1 )
TextEdit/colors/breakpoint_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/caret_color = Color( 0, 0, 0, 1 )
TextEdit/colors/code_folding_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_background_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_existing_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_scroll_color = Color( 0, 0, 0, 1 )
TextEdit/colors/completion_selected_color = Color( 0, 0, 0, 1 )
TextEdit/colors/current_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/executing_line_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
TextEdit/colors/function_color = Color( 0, 0, 0, 1 )
TextEdit/colors/line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/mark_color = Color( 0, 0, 0, 1 )
TextEdit/colors/member_variable_color = Color( 0, 0, 0, 1 )
TextEdit/colors/number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/safe_line_number_color = Color( 0, 0, 0, 1 )
TextEdit/colors/selection_color = Color( 0, 0, 0, 1 )
TextEdit/colors/symbol_color = Color( 0, 0, 0, 1 )
TextEdit/colors/word_highlighted_color = Color( 0, 0, 0, 1 )
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = null
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = null
TextEdit/styles/normal = null
TextEdit/styles/read_only = null
ToolButton/colors/font_color = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_disabled = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_hover = Color( 0, 0, 0, 1 )
ToolButton/colors/font_color_pressed = Color( 0, 0, 0, 1 )
ToolButton/constants/hseparation = 3
ToolButton/fonts/font = null
ToolButton/styles/disabled = null
ToolButton/styles/focus = null
ToolButton/styles/hover = null
ToolButton/styles/normal = null
ToolButton/styles/pressed = null
TooltipLabel/colors/font_color = Color( 0, 0, 0, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = null
TooltipPanel/styles/panel = null
Tree/colors/custom_button_font_highlight = Color( 0, 0, 0, 1 )
Tree/colors/drop_position_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color = Color( 0, 0, 0, 1 )
Tree/colors/font_color_selected = Color( 0, 0, 0, 1 )
Tree/colors/guide_color = Color( 0, 0, 0, 1 )
Tree/colors/relationship_line_color = Color( 0, 0, 0, 1 )
Tree/colors/title_button_color = Color( 0, 0, 0, 1 )
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = null
Tree/fonts/title_button_font = null
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = null
Tree/icons/select_arrow = null
Tree/icons/unchecked = null
Tree/icons/updown = null
Tree/styles/bg = null
Tree/styles/bg_focus = null
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = null
Tree/styles/selected_focus = null
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
VBoxContainer/constants/separation = 4
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = null
VScrollBar/styles/grabber_highlight = null
VScrollBar/styles/grabber_pressed = null
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null
VSeparator/constants/separation = 4
VSeparator/styles/separator = null
VSlider/icons/grabber = null
VSlider/icons/grabber_disabled = null
VSlider/icons/grabber_highlight = null
VSlider/icons/tick = null
VSlider/styles/grabber_area = null
VSlider/styles/grabber_area_highlight = null
VSlider/styles/slider = null
VSplitContainer/constants/autohide = 1
VSplitContainer/constants/separation = 12
VSplitContainer/icons/grabber = null
VSplitContainer/styles/bg = null
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = null

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_animation_end_stop"
} ]
}

[node name="Slots" type="Control" groups=[
"MENU_LISTENER",
]]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -858.816, 184.999 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
direction = 1

[node name="Title" type="Label" parent="."]
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "menu.slots"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickPlayText" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "menu.slots.click_for_play"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickDeleteText" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "menu.slots.click_for_delete"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsScroll" type="ScrollContainer" parent="."]
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.8
theme = SubResource( 8 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="HBoxContainer" parent="OptionsScroll"]
margin_right = 1424.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game1" parent="OptionsScroll/Options" instance=ExtResource( 6 )]
margin_bottom = 240.0

[node name="Game2" parent="OptionsScroll/Options" instance=ExtResource( 6 )]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 240.0

[node name="Game3" parent="OptionsScroll/Options" instance=ExtResource( 6 )]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 240.0

[node name="Game4" parent="OptionsScroll/Options" instance=ExtResource( 6 )]
margin_left = 612.0
margin_right = 812.0
margin_bottom = 240.0

[node name="Game5" parent="OptionsScroll/Options" instance=ExtResource( 6 )]
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 240.0

[node name="Game6" parent="OptionsScroll/Options" instance=ExtResource( 6 )]
margin_left = 1020.0
margin_right = 1220.0
margin_bottom = 240.0

[node name="DeleteGame" type="Control" parent="OptionsScroll/Options"]
margin_left = 1224.0
margin_right = 1424.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 200 )

[node name="Image" type="TextureRect" parent="OptionsScroll/Options/DeleteGame"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" parent="OptionsScroll/Options/DeleteGame" instance=ExtResource( 3 )]
anchor_top = 1.0
margin_top = -72.0
text = "menu.slots.remove"
method_name = "menu_listener_on_slot_delete_pressed"

[node name="Back" parent="." instance=ExtResource( 3 )]
anchor_left = 0.8
anchor_top = 0.8
alignment = 1
alignment = 1
text = "menu.back"
method_name = "menu_listener_on_principal_opened"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 9 )
anims/stop = SubResource( 10 )

[connection signal="option_changed" from="." to="." method="_on_Slots_option_changed"]
[connection signal="pressed" from="OptionsScroll/Options/Game1" to="." method="_on_Option_pressed" binds= [ 1 ]]
[connection signal="pressed" from="OptionsScroll/Options/Game2" to="." method="_on_Option_pressed" binds= [ 2 ]]
[connection signal="pressed" from="OptionsScroll/Options/Game3" to="." method="_on_Option_pressed" binds= [ 3 ]]
[connection signal="pressed" from="OptionsScroll/Options/Game4" to="." method="_on_Option_pressed" binds= [ 4 ]]
[connection signal="pressed" from="OptionsScroll/Options/Game5" to="." method="_on_Option_pressed" binds= [ 5 ]]
[connection signal="pressed" from="OptionsScroll/Options/Game6" to="." method="_on_Option_pressed" binds= [ 6 ]]
[connection signal="pressed" from="OptionsScroll/Options/DeleteGame/Option" to="." method="_on_Delete_pressed"]
